--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "4-foundry-simple-storage/lib/forge-std"]
 	path = 4-foundry-simple-storage/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "5-foundry-fund-me/lib/forge-std"]
+	path = 5-foundry-fund-me/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
