--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "5-foundry-fund-me/lib/forge-std"]
 	path = 5-foundry-fund-me/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "4-foundry-simple-storage-f23/lib/forge-std"]
+	path = 4-foundry-simple-storage-f23/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
