--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "4-foundry-simple-storage-f23/lib/forge-std"]
 	path = 4-foundry-simple-storage-f23/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "5-foundry-fund-me-f23/lib/forge-std"]
+	path = 5-foundry-fund-me-f23/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
