--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "5-foundry-fund-me-f23/lib/forge-std"]
 	path = 5-foundry-fund-me-f23/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "6-foundry-smart-contract-lottery-f23/lib/forge-std"]
+	path = 6-foundry-smart-contract-lottery-f23/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
