6-foundry-smart-contract-lottery-f23: Added logic for generating random number in raffle contract

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "6-foundry-smart-contract-lottery-f23/lib/forge-std"]
 	path = 6-foundry-smart-contract-lottery-f23/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "6-foundry-smart-contract-lottery-f23/lib/chainlink"]
+	path = 6-foundry-smart-contract-lottery-f23/lib/chainlink
+	url = https://github.com/smartcontractkit/chainlink
