--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "6-foundry-smart-contract-lottery-f23/lib/chainlink"]
 	path = 6-foundry-smart-contract-lottery-f23/lib/chainlink
 	url = https://github.com/smartcontractkit/chainlink
+[submodule "6-foundry-smart-contract-lottery-f23/lib/solmate"]
+	path = 6-foundry-smart-contract-lottery-f23/lib/solmate
+	url = https://github.com/transmissions11/solmate
