--- a/6-foundry-smart-contract-lottery-f23/foundry.toml
+++ b/6-foundry-smart-contract-lottery-f23/foundry.toml
@@ -2,6 +2,6 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-remappings = ["@chainlink/=lib/chainlink/","@solmate/=lib/solmate/src/"]
+remappings = ["@chainlink/=lib/chainlink/","@solmate/=lib/solmate/src/","foundry-devops/=lib/foundry-devops/"]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
