--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "6-foundry-smart-contract-lottery-f23/lib/foundry-devops"]
 	path = 6-foundry-smart-contract-lottery-f23/lib/foundry-devops
 	url = https://github.com/Cyfrin/foundry-devops
+[submodule "7-foundry-ERC20-f23/lib/forge-std"]
+	path = 7-foundry-ERC20-f23/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
