--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "7-foundry-ERC20-f23/lib/forge-std"]
 	path = 7-foundry-ERC20-f23/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "7-foundry-ERC20-f23/lib/openzeppelin-contracts"]
+	path = 7-foundry-ERC20-f23/lib/openzeppelin-contracts
+	url = https://github.com/openzeppelin/openzeppelin-contracts
