--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "7-foundry-ERC20-f23/lib/openzeppelin-contracts"]
 	path = 7-foundry-ERC20-f23/lib/openzeppelin-contracts
 	url = https://github.com/openzeppelin/openzeppelin-contracts
+[submodule "8-foundry-mood-nft-f23/lib/forge-std"]
+	path = 8-foundry-mood-nft-f23/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
