--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "8-foundry-mood-nft-f23/lib/forge-std"]
 	path = 8-foundry-mood-nft-f23/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "8-foundry-mood-nft-f23/lib/openzeppelin-contracts"]
+	path = 8-foundry-mood-nft-f23/lib/openzeppelin-contracts
+	url = https://github.com/Openzeppelin/openzeppelin-contracts
