9-foundry-defi-stablecoin-cu: Initial commit

--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "8-foundry-mood-nft-f23/lib/foundry-devops"]
 	path = 8-foundry-mood-nft-f23/lib/foundry-devops
 	url = https://github.com/cyfrin/foundry-devops
+[submodule "9-foundry-defi-stablecoin-cu/lib/forge-std"]
+	path = 9-foundry-defi-stablecoin-cu/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
