9-foundry-defi-stablecoin-cu: Added DecentralizedStableCoin contract

--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "9-foundry-defi-stablecoin-cu/lib/forge-std"]
 	path = 9-foundry-defi-stablecoin-cu/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "9-foundry-defi-stablecoin-cu/lib/openzeppelin-contracts"]
+	path = 9-foundry-defi-stablecoin-cu/lib/openzeppelin-contracts
+	url = https://github.com/openzeppelin/openzeppelin-contracts
