--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "9-foundry-defi-stablecoin-cu/lib/openzeppelin-contracts"]
 	path = 9-foundry-defi-stablecoin-cu/lib/openzeppelin-contracts
 	url = https://github.com/openzeppelin/openzeppelin-contracts
+[submodule "10-foundry-upgrades/lib/forge-std"]
+	path = 10-foundry-upgrades/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
