--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "10-foundry-upgrades/lib/forge-std"]
 	path = 10-foundry-upgrades/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "10-foundry-upgrades/lib/openzeppelin-contracts"]
+	path = 10-foundry-upgrades/lib/openzeppelin-contracts
+	url = https://github.com/openzeppelin/openzeppelin-contracts
